--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "ecommerce-app",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "babel.config.js",
+  "description": "E-commerce Web Application",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -10,20 +9,28 @@
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
-  "author": "",
+  "author": "Carlos Maundu",
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^5.16.8",
     "@mui/material": "^5.16.8",
+    "@mui/styled-engine-sc": "^6.1.9",
+    "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/react": "^16.0.1",
-    "axios": "^1.7.8",
+    "axios": "0.27.2",
     "formik": "^2.4.6",
+    "matchmedia-polyfill": "^0.3.2",
     "punycode": "^2.3.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4",
     "yup": "^1.4.0"
   },
@@ -39,7 +46,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "husky": "^8.0.0",
-    "jest": "^27.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "react-scripts": "^5.0.1"
   },
@@ -53,14 +61,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "^react-router-dom$": "<rootDir>/node_modules/react-router-dom"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!axios)"
     ]
   }
 }
