--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@mui/icons-material": "^5.16.8",
     "@mui/material": "^5.16.8",
     "@mui/styled-engine-sc": "^6.1.9",
+    "@mui/styles": "^6.1.9",
     "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/react": "^16.0.1",
     "axios": "0.27.2",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "matchmedia-polyfill": "^0.3.2",
     "punycode": "^2.3.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
