--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.16.8",
     "@mui/styled-engine-sc": "^6.1.9",
     "@mui/styles": "^6.1.9",
+    "@mui/x-data-grid": "^7.23.1",
     "@reduxjs/toolkit": "^2.4.0",
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
