--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@mui/icons-material": "^5.16.8",
-    "@mui/material": "^5.16.8",
+    "@mui/icons-material": "^5.16.12",
+    "@mui/material": "^5.16.12",
     "@mui/styled-engine-sc": "^6.1.9",
     "@mui/styles": "^6.1.9",
     "@mui/x-data-grid": "^7.23.1",
@@ -32,6 +32,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
+    "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
