--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@testing-library/react": "^16.0.1",
     "axios": "0.27.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "formik": "^2.4.6",
     "matchmedia-polyfill": "^0.3.2",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.6",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "react-lazyload": "^3.2.1",
