Add admin dashboard with metrics, charts, top products, and recent orders

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
-    "@mui/icons-material": "^5.16.12",
-    "@mui/material": "^5.16.12",
+    "@mui/icons-material": "^5.16.13",
+    "@mui/material": "^5.16.13",
     "@mui/styled-engine-sc": "^6.1.9",
     "@mui/styles": "^6.1.9",
     "@mui/x-data-grid": "^7.23.1",
@@ -26,17 +26,23 @@
     "axios": "0.27.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "country-region-data": "^3.1.0",
     "formik": "^2.4.6",
     "matchmedia-polyfill": "^0.3.2",
     "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.6",
     "react-chartjs-2": "^5.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
+    "react-international-phone": "^4.4.0",
     "react-lazyload": "^3.2.1",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
