--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "author": "Carlos Maundu",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@coreui/react": "^5.4.1",
+    "@coreui/react-pro": "^5.11.0",
+    "@date-io/date-fns": "^3.2.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.16.13",
-    "@mui/material": "^5.16.13",
+    "@mui/lab": "^6.0.0-beta.22",
+    "@mui/material": "^5.16.14",
     "@mui/styled-engine-sc": "^6.1.9",
     "@mui/styles": "^6.1.9",
     "@mui/x-data-grid": "^7.23.1",
+    "@mui/x-date-pickers": "^7.23.6",
+    "@mui/x-date-pickers-pro": "^7.23.6",
+    "@nextui-org/react": "^2.6.11",
     "@reduxjs/toolkit": "^2.4.0",
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
@@ -27,7 +34,10 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "country-region-data": "^3.1.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "framer-motion": "^11.17.0",
     "matchmedia-polyfill": "^0.3.2",
     "punycode": "^2.3.1",
     "react": "18.2.0",
@@ -45,6 +55,7 @@
     "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
     "redux-persist": "^6.0.0",
+    "rsuite": "^5.76.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "web-vitals": "^4.2.4",
@@ -65,6 +76,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "prettier": "^3.4.2",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
