--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@coreui/react": "^5.4.1",
     "@coreui/react-pro": "^5.11.0",
-    "@date-io/date-fns": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.16.13",
@@ -36,6 +35,7 @@
     "country-region-data": "^3.1.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
+    "firebase": "^11.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.17.0",
     "matchmedia-polyfill": "^0.3.2",
@@ -66,6 +66,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
+    "@date-io/date-fns": "^2.17.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.1",
